MNT: overhaul the harmonic oscillators (again)

--- a/code/temperture/demo.ipynb
+++ b/code/temperture/demo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "[167043 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,12 +215,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa369f5ebb1749faad350845fa2530c9",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -323,7 +328,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3eabaf86de7d48529e89501a12217a8c",
+       "model_id": "e1df675f27364ce18c92419b7dd167dd",
        "version_major": 2,
        "version_minor": 0
       },
