WIP: first draft of slides

--- a/code/harmonic_oscilator/02-plot-vibration.ipynb
+++ b/code/harmonic_oscilator/02-plot-vibration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -31,7 +31,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf6e69389b4445f49a64c26e776939c4",
+       "model_id": "4a84dfa48f5d4808993cc029deffc360",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,7 +48,7 @@
        "Text(0, 0.5, 'displacement (mm)')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -74,7 +74,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e454f729b6c44c58033e85422537170",
+       "model_id": "82cd4c76cdb84a17bdda72836bf45693",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,7 +91,7 @@
        "Text(0, 0.5, 'displacement (mm)')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,6 +110,7 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "plot_one(ax, d[0])\n",
+    "plot_one(ax, d[5])\n",
     "plot_one(ax, d[-1])\n",
     "ax.legend()\n",
     "ax.set_xlabel(\"time (ms)\")\n",
@@ -118,13 +119,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dcb0f0de91348a1b4f6997f8c55fa16",
+       "model_id": "1aaa77c23c3a415db4b8c5c64d02c9e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,7 +142,7 @@
        "Text(0, 0.5, 'displacement (mm)')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,34 +179,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Params(A=2.0030151437510098, zeta=0.02981355396292427, omega=2.9997000776946217, phi=1.5725563949633639)\n",
-      "(A=2.00, ζ=0.03, ω0=3.00, φ=1.57)\n",
-      "$(A=2.00, \\zeta=0.03, \\omega_0=3.00,\\varphi=1.57)$\n"
+      "Params(A=2.0014400039521316, zeta=0.02658800859092437, omega=3.563013819697966, phi=1.5653506273195317)\n",
+      "(A=2.00, ζ=0.03, ω0=3.56, φ=1.57)\n",
+      "$(A=2.00, \\zeta=0.03, \\omega_0=3.56,\\varphi=1.57)$\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$(A=2.00, \\zeta=0.03, \\omega_0=3.00,\\varphi=1.57)$"
+       "$(A=2.00, \\zeta=0.03, \\omega_0=3.56,\\varphi=1.57)$"
       ],
       "text/plain": [
-       "Params(A=2.0030151437510098, zeta=0.02981355396292427, omega=2.9997000776946217, phi=1.5725563949633639)"
+       "Params(A=2.0014400039521316, zeta=0.02658800859092437, omega=3.563013819697966, phi=1.5653506273195317)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fit_vals = fit(d[0])\n",
+    "fit_vals = fit(d[6])\n",
     "print(repr(fit_vals))\n",
     "print(fit_vals)\n",
     "print(fit_vals._repr_latex_())\n",
@@ -214,13 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4290a62fe914982ada65294b77025c4",
+       "model_id": "3cd3777baf384ff78006139648b7bdf4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +238,7 @@
        "Text(0, 0.5, 'displacement (mm)')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,13 +284,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d71512ad89554994b58a7138b991ca48",
+       "model_id": "07724faaa8df4b6ea0cafb588dbefa2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,6 +307,7 @@
     "plot_one(ax, d[0], fit(d[0]))\n",
     "plot_one(ax, d[10], fit(d[10]), offset=4)\n",
     "plot_one(ax, d[20], fit(d[20]), offset=8)\n",
+    "plot_one(ax, d[24], fit(d[24]), offset=12)\n",
     "ax.legend(ncol=3, loc=\"upper center\")\n",
     "ax.set_xlabel(\"time (ms)\")\n",
     "ax.set_ylabel(\"displacement (mm)\")\n",
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,13 +335,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50f55f44762e4e4bb8f87d83e40cb916",
+       "model_id": "ab5dc2018b1d42e6a18401f03e2dd3bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -353,17 +355,17 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcd73163ac0>"
+       "<matplotlib.legend.Legend at 0x7fcd51a6fa00>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "indx = [0, 10, 24]\n",
+    "indx = [0, 5, 15, 24]\n",
     "plot_several(ax, d[indx], [fit(d[i]) for i in indx])\n",
     "ax.legend(ncol=3, loc=\"upper center\")"
    ]
