--- a/code/harmonic_oscilator/03-layout-figure.ipynb
+++ b/code/harmonic_oscilator/03-layout-figure.ipynb
@@ -40,7 +40,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "832af524136e486781b21219a1750fe9",
+       "model_id": "24bd9398cc4d4785a2202be6075d01a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -102,7 +102,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49ca3540ac0a40aeb575a2afcf4625c5",
+       "model_id": "906dc2e34ea74a90b779cdf20a1b6790",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f082bba28b0>"
+       "<matplotlib.legend.Legend at 0x7faf1f0a1760>"
       ]
      },
      "execution_count": 6,
@@ -178,7 +178,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "561d02acf658468ca87894c0a06c1183",
+       "model_id": "953ab85683534b83b7163dce505548de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,15 +192,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'raw': <matplotlib.lines.Line2D at 0x7f082babcd60>,\n",
-       "  'fit': <matplotlib.lines.Line2D at 0x7f08277686d0>,\n",
-       "  'annotation': Text(0.95, 0.5, '$C=15.0$\\n$\\\\zeta=0.024$ $\\\\omega_0=3.00$')},\n",
-       " {'raw': <matplotlib.lines.Line2D at 0x7f0827768e20>,\n",
-       "  'fit': <matplotlib.lines.Line2D at 0x7f0827771370>,\n",
-       "  'annotation': Text(0.95, 4.25, '$C=21.2$\\n$\\\\zeta=0.022$ $\\\\omega_0=4.01$')},\n",
-       " {'raw': <matplotlib.lines.Line2D at 0x7f0827768490>,\n",
-       "  'fit': <matplotlib.lines.Line2D at 0x7f0827771880>,\n",
-       "  'annotation': Text(0.95, 8.0, '$C=30.0$\\n$\\\\zeta=0.034$ $\\\\omega_0=6.00$')}]"
+       "[{'raw': <matplotlib.lines.Line2D at 0x7faf1e4e9b20>,\n",
+       "  'fit': <matplotlib.lines.Line2D at 0x7faf1a433d00>,\n",
+       "  'annotation': Text(0.95, 0.5, '$C=15.0$\\n$\\\\zeta=0.036$ $\\\\omega_0=3.00$')},\n",
+       " {'raw': <matplotlib.lines.Line2D at 0x7faf1e5377c0>,\n",
+       "  'fit': <matplotlib.lines.Line2D at 0x7faf1a4806d0>,\n",
+       "  'annotation': Text(0.95, 4.25, '$C=21.2$\\n$\\\\zeta=0.028$ $\\\\omega_0=4.01$')},\n",
+       " {'raw': <matplotlib.lines.Line2D at 0x7faf1e562ac0>,\n",
+       "  'fit': <matplotlib.lines.Line2D at 0x7faf1a466610>,\n",
+       "  'annotation': Text(0.95, 8.0, '$C=30.0$\\n$\\\\zeta=0.045$ $\\\\omega_0=6.00$')}]"
       ]
      },
      "execution_count": 8,
@@ -222,7 +222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcd1790dc68f4db5a354bbbff5d8e6af",
+       "model_id": "d7107753656340a1a09168bc4d6acb99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f0827699e80>]"
+       "[<matplotlib.lines.Line2D at 0x7faf1f0e0430>]"
       ]
      },
      "execution_count": 9,
@@ -260,7 +260,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59535cf1d907456cad0b40ec4778e2a1",
+       "model_id": "849435b0e3784002b17b7423efc46c16",
        "version_major": 2,
        "version_minor": 0
       },
@@ -318,7 +318,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42d5e3c9c8d14457868ffe171a83e5a1",
+       "model_id": "3fa9a6d3752d487dac804f8bbaa16738",
        "version_major": 2,
        "version_minor": 0
       },
@@ -390,7 +390,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e102a0681fb3458791200fcf45c78d20",
+       "model_id": "d1c05590026740faa2c66055512d55c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,7 +422,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13df523a32324d758403bdf9b55499de",
+       "model_id": "696095b737964a2a88dd274440b59128",
        "version_major": 2,
        "version_minor": 0
       },
@@ -437,21 +437,21 @@
      "data": {
       "text/plain": [
        "(<Figure size 338.583x846.457 with 3 Axes>,\n",
-       " {'B': <AxesSubplot:label='B', xlabel='control (arb)', ylabel='$\\\\zeta$'>,\n",
-       "  'A': <AxesSubplot:label='A', xlabel='time (ms)', ylabel='displacement (mm)'>,\n",
-       "  'C': <AxesSubplot:label='C', xlabel='control (arb)', ylabel='$\\\\omega_0/2\\\\pi$ (kHz)'>},\n",
-       " {'vibrations': [{'raw': <matplotlib.lines.Line2D at 0x7f08273802b0>,\n",
-       "    'fit': <matplotlib.lines.Line2D at 0x7f08273cf940>,\n",
-       "    'annotation': Text(0.95, 0.5, '$C=15.0$\\n$\\\\zeta=0.024$ $\\\\omega_0=3.00$')},\n",
-       "   {'raw': <matplotlib.lines.Line2D at 0x7f08273809d0>,\n",
-       "    'fit': <matplotlib.lines.Line2D at 0x7f0827380e80>,\n",
-       "    'annotation': Text(0.95, 4.25, '$C=21.2$\\n$\\\\zeta=0.022$ $\\\\omega_0=4.01$')},\n",
-       "   {'raw': <matplotlib.lines.Line2D at 0x7f0827380340>,\n",
-       "    'fit': <matplotlib.lines.Line2D at 0x7f082738d460>,\n",
-       "    'annotation': Text(0.95, 8.0, '$C=27.5$\\n$\\\\zeta=0.045$ $\\\\omega_0=5.36$')}],\n",
-       "  'zeta': [<matplotlib.lines.Line2D at 0x7f082741e0a0>],\n",
-       "  'omega': [<matplotlib.lines.Line2D at 0x7f082738d730>]},\n",
-       " {'B': Text(-5, 5, '(b)'), 'A': Text(-5, 5, '(a)'), 'C': Text(-5, 5, '(c)')})"
+       " {'C': <AxesSubplot:label='C', xlabel='control (arb)', ylabel='$\\\\omega_0/2\\\\pi$ (kHz)'>,\n",
+       "  'B': <AxesSubplot:label='B', xlabel='control (arb)', ylabel='$\\\\zeta$'>,\n",
+       "  'A': <AxesSubplot:label='A', xlabel='time (ms)', ylabel='displacement (mm)'>},\n",
+       " {'vibrations': [{'raw': <matplotlib.lines.Line2D at 0x7faf186ba880>,\n",
+       "    'fit': <matplotlib.lines.Line2D at 0x7faf186badf0>,\n",
+       "    'annotation': Text(0.95, 0.5, '$C=15.0$\\n$\\\\zeta=0.036$ $\\\\omega_0=3.00$')},\n",
+       "   {'raw': <matplotlib.lines.Line2D at 0x7faf186c0310>,\n",
+       "    'fit': <matplotlib.lines.Line2D at 0x7faf186c0a30>,\n",
+       "    'annotation': Text(0.95, 4.25, '$C=21.2$\\n$\\\\zeta=0.028$ $\\\\omega_0=4.01$')},\n",
+       "   {'raw': <matplotlib.lines.Line2D at 0x7faf186c0b20>,\n",
+       "    'fit': <matplotlib.lines.Line2D at 0x7faf186c71f0>,\n",
+       "    'annotation': Text(0.95, 8.0, '$C=27.5$\\n$\\\\zeta=0.041$ $\\\\omega_0=5.36$')}],\n",
+       "  'zeta': [<matplotlib.lines.Line2D at 0x7faf186ba3a0>],\n",
+       "  'omega': [<matplotlib.lines.Line2D at 0x7faf186c78b0>]},\n",
+       " {'C': Text(-5, 5, '(c)'), 'B': Text(-5, 5, '(b)'), 'A': Text(-5, 5, '(a)')})"
       ]
      },
      "execution_count": 16,
