--- a/code/xrf/demo.ipynb
+++ b/code/xrf/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b068ea57ef647feb035483f49327bc7",
+       "model_id": "5197b779448d470f9c532b57d1b2475e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,16 +40,26 @@
     {
      "data": {
       "text/plain": [
-       "<xrf_interact.XRFInteract at 0x7f175c5e54c0>"
+       "<xrf_interact.XRFInteract at 0x7f16fe827610>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "show_xrf('scan_3624.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.gcf().savefig('xrf_snap.pdf')"
    ]
   },
   {
